# chap-python-sdk

./: .mcp.json  .pre-commit-config.yaml  IMPLEMENTATION_PLAN.md  MODEL_CONTRACT.md  Makefile  PLAN.md  README.md  chapkit_validation_bugs.md  conftest.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: index.md
docs/api/: assertions.md  example-data.md  generators.md  index.md  predictions.md  types.md  validation.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: assertions.md  data-generation.md  model-testing.md  prediction-formats.md
src/chap_python_sdk/: __init__.py
src/chap_python_sdk/testing/: __init__.py  assertions.py  example_data.py  generators.py  predictions.py  types.py  validation.py
tests/: __init__.py
tests/testing/: __init__.py  conftest.py  test_assertions.py  test_config_validation.py  test_example_data.py  test_generators.py  test_predictions.py  test_validation.py
