[project]
name = "chap-python-sdk"
version = "0.1.0"
description = "Validation and testing framework for chapkit models"
readme = "README.md"
requires-python = ">=3.13"
license = "AGPL-3.0-or-later"
dependencies = [
    "chapkit",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "geojson-pydantic>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.11",
    "pyright>=1.1",
    "ruff>=0.5",
    "coverage>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chap_python_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
strict = true
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnnecessaryIsInstance = false

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "D"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
    "pytest-cov>=7.0.0",
]
